# rag-research-paper

./: .env.example  .gitignore  PHASE0_RESEARCH_REPORT.md  README.md  pyproject.toml
configs/: default.yaml
paper/: acl.sty  main.tex  references.bib
scripts/: analyze_results.py  generate_figures.py  run_all_experiments.py  run_experiment.py  sanity_check.py
src/: chunking.py  data_loader.py
src/evaluation/: generation_metrics.py  retrieval_metrics.py  statistical_tests.py
src/generation/: generator.py
src/reranking/: reranker.py
src/retrieval/: base.py  bm25_retriever.py  colbert_retriever.py  contextual_retriever.py  dense_retriever.py  hybrid_retriever.py  hyde_retriever.py  hype_retriever.py  multi_query_retriever.py
src/utils/: common.py
